# support-aware-stream-calibration

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: frozen_v3_sasc.json  protocol.json
data/: README.md
docs/: DATA.md  MANUSCRIPT_ARTIFACTS.md  REPRODUCIBILITY.md  REVIEW_CHECKLIST.md
manifests/: README.md
notebooks/: 01_vit_training_logits_and_source_bank.ipynb  02_vit_sasc_analysis_and_diagnostics.ipynb  03_resnet_baseline_protocol_rerun.ipynb  04_resnet_sasc_analysis_and_diagnostics.ipynb  05_close_baselines_and_method_comparison.ipynb  06_extra_diagnostics_and_final_exports.ipynb  README.md
results/: README.md
scripts/: make_tables_from_outputs.py  run_sasc_from_cached_logits.py
src/sasc/: __init__.py  bootstrap.py  descriptors.py  io.py  metrics.py  sasc.py  temperature.py
tests/: test_sasc_core.py
